--- a/scss/_workstyle.scss
+++ b/scss/_workstyle.scss
@@ -1,5 +1,27 @@
 @import "fonts";
 @import "colour";
+body.workpage {
+    background-color: #001a1f;
+    margin-top: 3%;
+    overflow-x: hidden;
+}
+
+body.workpage {
+    animation: workpage 1s;
+
+}
+@keyframes workpage {
+    from {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
 
 .gallery
 {
@@ -34,17 +56,23 @@
     margin-bottom: 5%;
   }
 }
+
+
+
 .galleryButton{
-  margin-left: 27%;
+  // margin-left: 7%;
   margin-bottom: 2%;
-  h3{
-    float: left;
+div{
+    // font-size: 2vw;
+    // float: left;
+    text-align: center;
     cursor: pointer;
     color: $white;
     text-transform: uppercase;
-    margin-right: 2.5%;
-    padding-right: 2.5%;
-    border-right: 1px solid $white;
+    // margin-right: 2.5%;
+    // padding-right: 2.5%;
+    // border-right: 1px solid $white;
+    margin-bottom: 1%;
     text-align: center;
   }
 
@@ -62,6 +90,14 @@
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
+  img{
+    filter: grayscale(50%);
+    transition: 1s;
+  }
+
+  img:hover{
+    filter: grayscale(0);
+  }
 }
 
 /* Create four equal columns that sits next to each other */
@@ -95,5 +131,105 @@
 
 .light{
   background-color: rgba(0,0,0,.7);
+
+}
+//
+// .prev,
+// .next {
+//   cursor: pointer;
+//   position: absolute;
+//   top: 50%;
+//   width: auto;
+//   padding: 16px;
+//   margin-top: -50px;
+//   color: $white;
+//   font-weight: bold;
+//   font-size: 20px;
+//   transition: 0.6s ease;
+//   border-radius: 0 3px 3px 0;
+//   user-select: none;
+//   -webkit-user-select: none;
+//
+//
+// }
+//
+// /* Position the "next button" to the right */
+// .next {
+//   right: 10%;
+//   border-radius: 3px 0 0 3px;
+// }
+// .prev {
+//   left: 10%;
+//   border-radius: 3px 0 0 3px;
+// }
+//
+// /* On hover, add a black background color with a little bit see-through */
+// .prev:hover,
+// .next:hover {
+//   text-decoration: none;
+//   // background-color: $white;
+//   color: $primaryColour;
+//   // border-radius: 50%;
+// }
+
+@media screen and (max-width: 960px)
+{
+  .imgtag{
+    img{
+
+      margin-left: 15%;
+    }
+
+  }
+}
+
+.dev-image{
+  height: 31vw;
+  width: auto;
+  margin: 1%;
+  // margin-left: 5%;
+  // margin: 0 auto;
+  // align-content: center;
+}
+
+.dev-desc{
+  margin-top: 1%;
+  color: $white;
+  // border-top: 1px solid $white ;
+  padding: 1%;
+  margin-left: 10%;
+
+  text-align: center;
+
+}
+
+.vid-image{
+  height: 25vw;
+  width: auto;
+  margin: 1%;
+
+}
+
+.vid{
+  height: 25vw;
+  width: auto;
+  margin: 1%;
+
+}
+
+.vid-desc{
+  margin-top: 1%;
+  color: $white;
+  // border-top: 1px solid $white ;
+  padding: 1%;
+  text-align: center;
+// display: block;
+}
+
+.imgtag{
+  // margin-left: 10%;
+
+  border-bottom: 1px solid $white ;
+  padding-bottom: 1%;
 
 }
